--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ numpy==1.19.4
 pymongo==3.11.1
 python-multipart==0.0.5
 requests==2.25.0
+requests-toolbelt==0.9.1
 six==1.15.0
 streaming-form-data==1.8.0
 urllib3==1.26.1
